@@ -40,7 +40,7 @@
 #include "vncDesktop.h"
 #include "vncService.h"
 #include "WallpaperUtils.h"
-#include "TsSessions.h"
+//#include "TsSessions.h"
 
 #if (_MSC_VER>= 1300)
 #include <fstream>
@@ -161,9 +161,11 @@ void *vncDesktopThread::run_undetached(void *arg)
 	// Save the thread's "home" desktop, under NT (no effect under 9x)
 	HDESK home_desktop = GetThreadDesktop(GetCurrentThreadId());
 
+#if 0
 	// Try to make session zero the console session
 	if (!inConsoleSession())
 		setConsoleSession();
+#endif
 
 	// Attempt to initialise and return success or failure
 	if (!m_desktop->Startup())
@@ -406,12 +408,14 @@ vncDesktop::~vncDesktop()
 BOOL
 vncDesktop::Startup()
 {
+#if 0
 	// Currently, we just check whether we're in the console session, and
 	//   fail if not
 	if (!inConsoleSession()) {
 		vnclog.Print(LL_INTERR, VNCLOG("Console is not session zero - reconnect to restore Console session"));
 		return FALSE;
 	}
+#endif
 
 	// Configure the display for optimal VNC performance.
 	SetupDisplayForConnection();
@@ -2014,7 +2018,7 @@ BOOL vncDesktop::CheckUpdates()
 		UpdateBlankScreenTimer();
 
 		// Has the display resolution or desktop changed?
-		if (m_displaychanged || !vncService::InputDesktopSelected() || !inConsoleSession())
+		if (m_displaychanged || !vncService::InputDesktopSelected() /*|| !inConsoleSession()*/)
 		{
 			vnclog.Print(LL_STATE, VNCLOG("display resolution or desktop changed.\n"));
 
