@@ -1,5 +1,9 @@
 2007-05-10	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ica/win32/src/vncDesktop.cpp:
+	* ica/win32/win32vnc.cpp:
+	disabled TightVNC's new terminal-session-support
+
 	* setup/src/dialogs.cpp:
 	when copying file add absolute paths to source-file-names
 	closes #1704173
